fixed local storage function to store more than one score, added clear scores and back button function

--- a/assets/style.css
+++ b/assets/style.css
@@ -34,6 +34,12 @@ form input {
     font-size: 40px;
 }
 
+#answerCheck {
+    border-top: 1px solid grey;
+    text-align: left;
+    color:grey
+}
+
 #scoresList {
     text-align: left;
 }
